[vr] Fix reticle sorting for elements in different draw phases

In my CL to fix reticle sorting, I did not update the draw phase of the
reticle when I inserted into the lists of elements vended by the UiScene
https://chromium-review.googlesource.com/c/chromium/src/+/749741

The consequence is that, although we returned the reticle in the right
spot from UiScene, the UiRenderer would then promptly sort it into the
wrong position when it sorted out draw phases.

Bug: 785245
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I36fb157257d079c88b556d4383fae75ab48efb65
Reviewed-on: https://chromium-review.googlesource.com/771533
Reviewed-by: Christopher Grant <cjgrant@chromium.org>
Commit-Queue: Ian Vollick <vollick@chromium.org>
Cr-Commit-Position: refs/heads/master@{#516697}
Former-commit-id: 684bd3e81b3455be86aeb2b4a8bede4f7840bbab